# vscode-notebook-mcp

./: .gitignore  .mcp.json  .vscodeignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
scripts/: setup-test-python.sh
src/: extension.ts
src/mcp/: server.ts
src/mcp/tools/: cells.ts  index.ts  kernel.ts  notebooks.ts
src/schemas/: index.ts
src/utils/: kernel.ts  notebook.ts  output.ts  plotly.ts  pythonEnv.ts
test/fixtures/python/: pyproject.toml
test/fixtures/python-unregistered/: pyproject.toml
test/fixtures/workspace/notebooks/: empty.ipynb  with-cells.ipynb
test/integration/: runTest.ts
test/integration/suite/: cells.test.ts  execution.test.ts  helpers.ts  index.ts  kernel.test.ts  kernelId.test.ts  mcpClient.ts  notebooks.test.ts  plotly.test.ts
